agregar calif y duracion

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -29,7 +29,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="noah"><h3>The Notebook</h3></a>
-                        <p>Calificacion: 7,8/10 | "2h43" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.8/10 | "2h43" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/diario de una pasion.jpg" alt="Diario de una pasión">
                             <iframe class="trailer" src="https://www.youtube.com/embed/BjJcYdEOI0k?si=wGsci-DNiQGU4pZY&amp;controls=0&amp;start=3" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -41,7 +41,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="seb"><h3>La La Land</h3></a>
-                        <p>Calificacion: 7,5/10 | "2h47" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.5/10 | "2h47" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand">
                             <iframe class="trailer" src="https://www.youtube.com/embed/0pdqf4P9MB8?si=SyHSGSk_HMHieuUa&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -53,7 +53,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="paris"><h3>Midnight in Paris</h3></a>
-                        <p>Calificacion: 7,3/10 | "1h36" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.3/10 | "1h36" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/midnight in paris.jpg" alt="midnight in paris">
                             <iframe class="trailer" src="https://www.youtube.com/embed/FAfR8omt-CY?si=5FbMrY5VjNCRqSWf" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -65,7 +65,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="darcy"><h3>Pride and Prejudice</h3></a>
-                        <p>Calificacion: 7,1/10 | "2h47" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.1/10 | "2h47" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/orgullo y prejuicio.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/Ur_DIHs92NM?si=L7CsaFmYF6dzkMb8" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -79,7 +79,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="match"><h3>The Perfect Match</h3></a>
-                        <p>Calificacion: 4,9/10 | "1h36" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 4.9/10 | "1h36" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/perfect match.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/lf4GJAY4n1I?si=Bj8kWKCp6do8PDE9" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -115,7 +115,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="grey"><h3>Fifty Shades of Grey</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 4.2/10 | "1h44" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/OIP (12).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/SfZWFDs0LxA?si=Nqb-5e35IZDyngdm" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -127,7 +127,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="happy"><h3>Happy Ending</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 5.3/10 | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/OIP (8).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/iyLkbTBrXSg?si=pOMaE9vjxDKoQTBi" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -141,7 +141,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="rayo"><h3>Cars</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.2/10 | "1h57" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/cars.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/SbXIj2T-_uk?si=myjfY35WHYOTkCBU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -154,7 +154,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="dog"><h3>A Dog's Purpose</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.2/10 | "2h00" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (13).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/1jLOOCADTGs?si=1k5OUaaHN2xO0B0U" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -167,7 +167,7 @@
                     <div class="dtl_pelicula">
                         <a name="riley"></a>
                         <h3>Inside Out</h3>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.1/10 | "1h35" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/R (4).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/yRUAzGQ3nSY?si=dCdxQL3rowV7Z-L_" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -179,7 +179,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="andrew"><h3>The Amazing Spider-Man</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 6.9/10 | "2h16" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (19).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/upwf8RsyNqQ?si=0DtPxvsAM0_fRwAW" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -192,7 +192,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="selena"><h3>Monte Carlo</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 5.8/10 | "1h49" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (22).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/X0n3Q_VDQk8?si=YmIHkbY_3ERtYmtU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -204,7 +204,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="mike"><h3>Monsters Inc.</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.1/10 | "1h32" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/R (6).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/CGbgaHoapFM?si=VEJj9xPs-7RDnaz0&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -216,7 +216,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="dorado"><h3>The Road to el Dorado</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 6.9/10 | "1h29" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/dorado.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/Su7g8JVY0xI?si=fOEvlWAJ0H8u3pSw&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -228,7 +228,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="rapunzel"><h3>Tangled</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.7/10 | "1h40" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/tangled.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/JYKpIr1lSG0?si=57Cav8Vgh3UnIQx7&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -240,7 +240,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="george"><h3>George of the Jungle</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 5.5 | "1h32" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (16).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/ITlM041DW1U?si=PgVEBt_1Jy4I_xNm&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -254,7 +254,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="inter"><h3>Interestellar</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.7/10 | "2h49" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/interestellar.jpg" alt="interstellar">
                             <iframe class="trailer" src="https://www.youtube.com/embed/LYS2O1nl9iM?si=roDuOOBQdNt55-5-&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -266,7 +266,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="juegos_hambre"><h3>The Hunger Games</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.2/10 | "2h22" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
                             <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -278,7 +278,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="dune"><h3>Dune</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8/10 | "2h35" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/dune.jpg" alt="Dune">
                             <iframe class="trailer" src="https://www.youtube.com/embed/8g18jFHCLXk?si=IwQuOGhA2Ez2ZQX5&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -290,7 +290,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="shindler"><h3>Shindler´s List</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 9/10 | "3h15" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/schindler.jpg" alt="Schindler">
                             <iframe class="trailer" src="https://www.youtube.com/embed/Ur_DIHs92NM?si=L7CsaFmYF6dzkMb8" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -302,7 +302,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="12años"><h3>12 years of slavery</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.1/10 | "2h14" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/12 años escl.jpg" alt="12 años">
                             <iframe class="trailer" src="https://www.youtube.com/embed/z02Ie8wKKRg?si=G09StH_W7Qcwu8Bz&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -314,7 +314,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="parasite"><h3>Parasite</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.5/10 | "2h12" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/4VpOdGYKHtBz2vYJdSchvOSSDE9.jpg" alt="Parasite">
                             <iframe class="trailer" src="https://www.youtube.com/embed/SEUXfv87Wpk?si=KkBoh8S9VgCx1ic_&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -326,7 +326,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="whip"><h3>Whiplash</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.5/10 | "1h43" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/whiplash.jpg" alt="whiplash">
                             <iframe class="trailer" src="https://www.youtube.com/embed/7d_jQycdQGo?si=ObE8zyOGQJryvGOB&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -338,7 +338,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="socialnet"><h3>The Social Network</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 6.8/10 | "2h00" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/social network.jpg" alt="Social network">
                             <iframe class="trailer" src="https://www.youtube.com/embed/lB95KLmpLR4?si=1xQ-QubtHTGnYPOm&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -350,7 +350,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="tonya"><h3>I, Tonya</h3></a>
-                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion:  7.5/10 | "2h00" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/tonya.jpg" alt="Tonya">
                             <iframe class="trailer" src="https://www.youtube.com/embed/OXZQ5DfSAAc?si=UNirbMzybTgNX1PP&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
