cambios html detalle

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -29,7 +29,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="noah"><h3>The Notebook</h3></a>
-                        <p>Calificacion: 7.8/10 | "2h43" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.8/10 | "2h43" | 2004 | Novela romantica | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/diario de una pasion.jpg" alt="Diario de una pasión">
                             <iframe class="trailer" src="https://www.youtube.com/embed/BjJcYdEOI0k?si=wGsci-DNiQGU4pZY&amp;controls=0&amp;start=3" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -41,7 +41,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="seb"><h3>La La Land</h3></a>
-                        <p>Calificacion: 7.5/10 | "2h47" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.5/10 | "2h47" | 2016 | Romance-Sátira | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand">
                             <iframe class="trailer" src="https://www.youtube.com/embed/0pdqf4P9MB8?si=SyHSGSk_HMHieuUa&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -53,7 +53,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="paris"><h3>Midnight in Paris</h3></a>
-                        <p>Calificacion: 7.3/10 | "1h36" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.3/10 | "1h36" | 2011 | Comedia romantica | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/midnight in paris.jpg" alt="midnight in paris">
                             <iframe class="trailer" src="https://www.youtube.com/embed/FAfR8omt-CY?si=5FbMrY5VjNCRqSWf" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -65,7 +65,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="darcy"><h3>Pride and Prejudice</h3></a>
-                        <p>Calificacion: 7.1/10 | "2h47" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.1/10 | "2h47" | 2005 | Novela romantica | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/orgullo y prejuicio.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/Ur_DIHs92NM?si=L7CsaFmYF6dzkMb8" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -79,7 +79,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="match"><h3>The Perfect Match</h3></a>
-                        <p>Calificacion: 4.9/10 | "1h36" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 4.9/10 | "1h36" | 2016 | Comedia romantica | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/perfect match.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/lf4GJAY4n1I?si=Bj8kWKCp6do8PDE9" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
