arreglo bug series

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                     <article class="categoria">
                         <h3>Series populares</h3> 
                         <div class ="portada">
-    
                             <div class="pelicula">
                                 <a href="./detail-serie.html"><img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg" alt="Gossip girl"></a>
                                 <h4>Gossip Girl</h4>
@@ -84,6 +83,7 @@
                                 <a href="./detail-serie.html"><img class="fotos" src="./img/ROMANCE/SERIES/outlander.jpg" alt="Outlander"></a>
                                 <h4>Outlander</h4>
                                 <p>Fecha de estreno: 2014</p>
+                            </div>
 
                             <div class="pelicula">
                                 <a href="./detail-serie.html"><img class="fotos" src="./img/FAMILIA/SERIES/R (7).jpeg" alt="Los Simpsons"></a>
