--- a/detail-movie.html
+++ b/detail-movie.html
@@ -23,6 +23,7 @@
                 <a class="navegador" href="./detail-serie.html">Detalles serie</a>
             </nav>
         </header>
+
         <main class="main_detalles">
 
             <section class="sct_detail_rom">
@@ -141,7 +142,7 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="12años"><h3>12 years of slavery</h3></a>
+                        <a name="12años"><h3>12 Years a Slave</h3></a>
                         <p>Calificacion: 8.1/10 | "2h14" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/12 años escl.jpg" alt="12 años">
