--- a/detail-serie.html
+++ b/detail-serie.html
@@ -24,6 +24,76 @@
             </nav>
         </header>
 
+        <main class="main_detalles">
+
+            <section class="sct_detail_rom">
+
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="blair"><h3>Gossip Girl</h3></a>
+                        <p>Calificacion: 7.2/10 | "2h22" | estreno | genero | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <p class="sinopsis">Lo que en el pasado fueron los Estados Unidos, ahora es una nación llamada Panem; un imponente Capitolio ejerce un control riguroso sobre los 12 distritos que lo rodean y que están aislados entre sí. Cada distrito se ve obligado a enviar anualmente un chico y una chica entre los doce y los dieciocho años para que participen en los Hunger Games, unos juegos que son transmitidos en directo por la televisión. Se trata de una lucha a muerte, en la que sólo puede haber un superviviente. Katniss Everdeen, una joven de dieciséis años, decide sustituir a su hermana en los juegos; pero para ella, que ya ha visto la muerte de cerca, la lucha por la supervivencia es su segunda naturaleza.</p>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="phil"><h3>Modern Family</h3></a>
+                        <p>Calificacion: 7.5/10 | "2h47" | 2016 | Romance-Sátira | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/FAMILIA/SERIES/R (5).jpeg" alt="LalaLand">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/0pdqf4P9MB8?si=SyHSGSk_HMHieuUa&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <p class="sinopsis">Mia y Sebastian son dos jóvenes que quieren abrirse camino en el mundo de Hollywood. Mia es una joven aspirante a actriz que trabaja como camarera mientras acude a castings y Sebastian toca el piano en bares. Un día sus caminos se cruzan e inmediatamente se enamoran. Los dos trabajan juntos para hacer realidad sus sueños, pero pronto se dan cuenta de que el mundo del arte pide sacrificios que ponen en peligro su relación.</p>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="out"><h3>Outlander</h3></a>
+                        <p>Calificacion: 8.7/10 | "2h49" | estreno | genero | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/ROMANCE/SERIES/outlander.jpg" alt="interstellar">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/LYS2O1nl9iM?si=roDuOOBQdNt55-5-&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <p class="sinopsis">Inspirada en la teoría del experto en relatividad Kip Stepehen Thorne sobre la existencia de los agujeros de gusano, y su función como canal para llevar a cabo los viajes en el tiempo. La historia gira en torno a un grupo de intrépidos exploradores que se adentran por uno de esos agujeros y viajan a través del mismo, encontrándose en otra dimensión. Un mundo desconocido se abre ante ellos y deberán luchar por mantenerse unidos si quieren volver de una pieza.</p>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="lisa"><h3>The Simpsons</h3></a>
+                        <p>Calificacion: 7.2/10 | "1h57" | estreno | genero | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/FAMILIA/SERIES/R (7).jpeg">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/SbXIj2T-_uk?si=myjfY35WHYOTkCBU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <p class="sinopsis"> Un pequeño y nuevo coche de carreras, llamado Rayo McQueen, se está preparando para ser un experto corredor y convertirse en uno de los automóviles más respetados en el panorama internacional. Un día toma la decisión de cambiar por completo su vida y se dirige a Radiator Springs, un pequeño y desértico pueblo donde hace nuevos amigos y comprenderá el verdadero sentido de su existencia. Allí entablará una buena relación con el Porsche Sally, Doc Hudson y Mater, una vieja camioneta que le hará comprender que hay cosas más importantes que los trofeos y la fama, algo que sin duda había sido el propósito del protagonista desde que se comprometió a participar en el mundo de las carreras. ¿Podrá Rayo McQueen dejar de lado todas estas cosas y centrarse en lo que de verdad merece la pena?
+                            </p>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="mirror"></a>
+                        <h3>Black Mirror</h3>
+                        <p>Calificacion: 8.1/10 | "1h35" | estreno | genero | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/THRILLER/SERIE/black mirror.jpg">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/yRUAzGQ3nSY?si=dCdxQL3rowV7Z-L_" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <p class="sinopsis">Intensamente cuenta la historia de Riley, una niña que se muda del Medio Oeste porque su padre ha conseguido trabajo en San Francisco. Riley tiene las emociones comunes que todos conocemos, pero estas emociones viven en un centro de contro dentro de la mente de Riley desde donde la ayudan a tomar decisiones en su vida. A continuación les presentamos el resumen de la historia de Intensamente.</p>
+                        </div>
+                    </div>
+                </article>
+
+            </section>
+
+        </main>
+
         <footer>
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
