--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
                         <h3>Series populares</h3> 
                         <div class ="portada">
                             <div class="pelicula">
-                                <a href="./detail-serie.html"><img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg" alt="Gossip girl"></a>
+                                <a href="./detail-serie.html#blair"><img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg" alt="Gossip girl"></a>
                                 <h4>Gossip Girl</h4>
                                 <p>Fecha de estreno: 2008</p>
                             </div>
     
                             <div class="pelicula">
-                                <a href="./detail-serie.html"><img class="fotos" src="./img/FAMILIA/SERIES/R (5).jpeg" alt="Morder Family"></a>
+                                <a href="./detail-serie.html#phil"><img class="fotos" src="./img/FAMILIA/SERIES/R (5).jpeg" alt="Morder Family"></a>
                                 <h4>Modern Family</h4>
                                 <p>Fecha de estreno: 2009</p>
                             </div>
     
                             <div class="pelicula">
-                                <a href="./detail-serie.html"><img class="fotos" src="./img/ROMANCE/SERIES/outlander.jpg" alt="Outlander"></a>
+                                <a href="./detail-serie.html#out"><img class="fotos" src="./img/ROMANCE/SERIES/outlander.jpg" alt="Outlander"></a>
                                 <h4>Outlander</h4>
                                 <p>Fecha de estreno: 2014</p>
                             </div>
 
                             <div class="pelicula">
-                                <a href="./detail-serie.html"><img class="fotos" src="./img/FAMILIA/SERIES/R (7).jpeg" alt="Los Simpsons"></a>
+                                <a href="./detail-serie.html#lisa"><img class="fotos" src="./img/FAMILIA/SERIES/R (7).jpeg" alt="Los Simpsons"></a>
                                 <h4>The Simpsons</h4>
                                 <p>Fecha de estreno: 1989</p>
                             </div>
 
                             <div class="pelicula">
-                                <a href="./detail-serie.html"><img class="fotos" src="./img/THRILLER/SERIE/black mirror.jpg" alt="Black mirror"></a>
+                                <a href="./detail-serie.html#mirror"><img class="fotos" src="./img/THRILLER/SERIE/black mirror.jpg" alt="Black mirror"></a>
                                 <h4>Black Mirror</h4>
                                 <p>Fecha de estreno: 2011</p>
                             </div>
